--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,27 @@
 .animate-fadeInOut {
   animation: fadeInOut 5s ease-in-out infinite;
 }
+.swiper-pagination-progressbar {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.swiper-pagination-progressbar-fill {
+  background: #ffcc00 !important;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: #4b5563; 
+  color:#ffcc00;
+  width: max-content;
+  height: max-content;
+  border-radius: 50%;
+  padding: 10px;
+
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background-color: white;
+   color: #4b5563; 
+ 
+}
